--- a/.github/workflows/fast-auto-tag-release.yml
+++ b/.github/workflows/fast-auto-tag-release.yml
@@ -6,6 +6,11 @@ on:
     - cron: "*/1 * * * *"
 
 jobs:
+  test-schedule:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check current time
+        run: date
   gh_tagged_release:
     runs-on: "ubuntu-latest"
     env:
