--- a/.github/workflows/fast-auto-tag-release.yml
+++ b/.github/workflows/fast-auto-tag-release.yml
@@ -1,16 +1,53 @@
 name: Fast Auto Tag and Release (Testing)
 
 on:
+  workflow_dispatch:
   schedule:
     # Test: run every 5 minutes
     - cron: "*/15 * * * *"
 
 jobs:
-  test-schedule:
+  update-tag:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Check current time
-        run: date
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Increment version and update file
+        run: |
+          # Extract the current version from configure.ac
+          VERSION=$(grep -oP 'AC_INIT\(\[tmux\], \K[0-9]+\.[0-9]+(?=\))' configure.ac)
+          echo "Current version: $VERSION"
+
+          # Increment the minor version
+          IFS='.' read -ra VER <<< "$VERSION"
+          NEW_MINOR=$((VER[1]+1))
+          NEW_VERSION="${VER[0]}.$NEW_MINOR"
+
+          # Write back to file
+          sed -i "s/AC_INIT(\[tmux\], $VERSION)/AC_INIT([tmux], $NEW_VERSION)/" configure.ac
+
+          # Set environment variable to use in subsequent steps
+          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
+
+      - name: Commit changes
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git add configure.ac
+          git commit -m "Increment version to $NEW_VERSION"
+
+      - name: Create tag
+        run: |
+          git tag -a "v$NEW_VERSION" -m "Release v$NEW_VERSION"
+          git push origin "v$NEW_VERSION"
+          git push
+
+        # env:
+        #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   gh_tagged_release:
     runs-on: "ubuntu-latest"
     env:
@@ -48,17 +85,6 @@ jobs:
       - run: "sh .github/travis/before-install.sh"
       - run: "sh .github/travis/build.sh"
       - run: "make dist"
-
-      - name: Generate and Push Tag
-        run: |
-          TAG_NAME=$(date -u +"%Y%m%d%H%M%S")
-          git tag $TAG_NAME
-          git push origin $TAG_NAME
-        env:
-          GIT_AUTHOR_NAME: "GitHub Actions"
-          GIT_AUTHOR_EMAIL: "actions@github.com"
-          GIT_COMMITTER_NAME: "GitHub Actions"
-          GIT_COMMITTER_EMAIL: "actions@github.com"
 
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
