--- a/.github/workflows/fast-auto-tag-release.yml
+++ b/.github/workflows/fast-auto-tag-release.yml
@@ -3,9 +3,10 @@ name: Fast Auto Tag and Release (Testing)
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 2 11 3 *"
-    - cron: "30 10 11 3 *"
-    - cron: "45 15 11 3 *"
+    - cron: "* * * * *"
+    # - cron: "0 2 11 3 *"
+    # - cron: "30 10 11 3 *"
+    # - cron: "45 15 11 3 *"
 
 jobs:
   update-tag:
