--- a/.github/workflows/fast-auto-tag-release.yml
+++ b/.github/workflows/fast-auto-tag-release.yml
@@ -3,9 +3,9 @@ name: Fast Auto Tag and Release (Testing)
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 2 11 3 *"
-    - cron: "30 10 11 3 *"
-    - cron: "45 15 11 3 *"
+    - cron: "45 1 * * *"
+    - cron: "15 9 * * *"
+    - cron: "30 17 * * *"
 
 jobs:
   update-tag:
@@ -20,31 +20,33 @@ jobs:
       - name: Increment version and update file
         run: |
           # Extract the current version from configure.ac
-          VERSION=$(grep 'AC_INIT(\[tmux\],' configure.ac | sed -n 's/.*AC_INIT(\[tmux\], \([next-]*[0-9]*\.[0-9]*\)).*/\1/p')
+          VERSION=$(grep -o 'next-[0-9]\+\.[0-9]\+' configure.ac | head -n 1 | sed 's/next-//')
           echo "Current version: $VERSION"
-
+          TAG="v$VERSION"
           # Increment the minor version
-          IFS='.' read -ra VER <<< "$VERSION"
-          NEW_MINOR=$((VER[1]+1))
-          NEW_VERSION="${VER[0]}.$NEW_MINOR"
+          IFS='.' read -ra version_parts <<< "$VERSION"
+          MAJOR="${version_parts[0]}"
+          MINOR="${version_parts[1]}"
+          NEXT_VERSION="$MAJOR.$((MINOR+1))"
 
           # Write back to file
-          sed -i "s/AC_INIT(\[tmux\], $VERSION)/AC_INIT([tmux], $NEW_VERSION)/" configure.ac
+          sed -i "/AC_INIT(\[tmux\], next-$CURRENT_VERSION)/s/next-$CURRENT_VERSION/next-$NEXT_VERSION/" configure.ac
 
           # Set environment variable to use in subsequent steps
-          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
+          echo "NEXT_VERSION=$NEXT_VERSION" >> $GITHUB_ENV
+          echo "Tag=$TAG" >> $GITHUB_ENV
 
       - name: Commit changes
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           git add configure.ac
-          git commit -m "Increment version to $NEW_VERSION"
+          git commit -m "Increment version to $NEXT_VERSION"
 
       - name: Create tag
         run: |
-          git tag -a "v$NEW_VERSION" -m "Release v$NEW_VERSION"
-          git push origin "v$NEW_VERSION"
+          git tag -a "v$TAG" -m "Release v$TAG"
+          git push origin "v$TAG"
           git push
 
         # env:
