--- a/.github/workflows/fast-auto-tag-release.yml
+++ b/.github/workflows/fast-auto-tag-release.yml
@@ -8,54 +8,7 @@ on:
     - cron: "30 17 * * *"
 
 jobs:
-  update-tag:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: Increment version and update file
-        run: |
-          # Extract the current version from configure.ac
-          VERSION=$(grep -o 'next-[0-9]\+\.[0-9]\+' configure.ac | head -n 1 | sed 's/next-//')
-          echo "Current version: $VERSION"
-          TAG="v$VERSION"
-          # Increment the minor version
-          IFS='.' read -ra version_parts <<< "$VERSION"
-          MAJOR="${version_parts[0]}"
-          MINOR="${version_parts[1]}"
-          NEXT_VERSION="$MAJOR.$((MINOR+1))"
-
-          # Write back to file
-          sed -i "/AC_INIT(\[tmux\], next-$CURRENT_VERSION)/s/next-$CURRENT_VERSION/next-$NEXT_VERSION/" configure.ac
-
-          # Set environment variable to use in subsequent steps
-          echo "NEXT_VERSION=$NEXT_VERSION" >> $GITHUB_ENV
-          echo "TAG=$TAG" >> $GITHUB_ENV
-
-      - name: Config git
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-
-      - name: Create tag
-        run: |
-          git tag -a "v$TAG" -m "Release $TAG"
-          git push origin "$TAG"
-          git push
-
-      - name: Commit changes
-        run: |
-          git add configure.ac
-          git commit -m "Increment version to $NEXT_VERSION"
-
-        # env:
-        #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   release:
-    needs: update-tag
     runs-on: "ubuntu-latest"
     # env:
     #   JEST_VERBOSE: ${{ secrets.JEST_VERBOSE }}
@@ -79,6 +32,17 @@ jobs:
       # - run: "yarn build"
       # - run: "yarn jest --env=node --colors --forceExit"
 
+      - name: "Remove -next prefix from version in configure.ac"
+        run: sed -i "" '/AC_INIT(\[tmux\], /s/next-//' configure.ac
+      - name: "Extract version numer"
+        run: |
+          VERSION=$(grep 'AC_INIT(\[tmux\],' configure.ac | sed -n 's/.*AC_INIT(\[tmux\], \([0-9]*\.[0-9]*\)).*/\1/p')
+          echo "Current version: $VERSION"
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git tag -a "v$VERSION" -m "Release v$VERSION"
+          git push origin "v$VERSION"
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
       # - run: "sh autogen.sh"
       # - run: "./configure"
       - run: "sudo apt-get update -qq"
@@ -115,3 +79,15 @@ jobs:
       #   with:
       #     job_status: ${{ job.status }}
       #     opensentinel_token: ${{ secrets.OSL_TOKEN }}
+
+      - name: "Update next version number"
+        run: |
+          IFS='.' read -ra VER <<< "$VERSION"
+          NEW_MINOR=$((VER[1]+1))
+          NEW_VERSION="${VER[0]}.$NEW_MINOR"
+
+          # Write back to file
+          sed -i "s/AC_INIT(\[tmux\], $VERSION)/AC_INIT([tmux], next-$NEW_VERSION)/" configure.ac
+          git add configure.ac
+          git commit -m "Bump version to next-$NEW_VERSION"
+          git push origin HEAD
