--- a/.github/workflows/fast-auto-tag-release.yml
+++ b/.github/workflows/fast-auto-tag-release.yml
@@ -33,7 +33,7 @@ jobs:
       # - run: "yarn jest --env=node --colors --forceExit"
 
       - name: "Remove -next prefix from version in configure.ac"
-        run: sed -i "" '/AC_INIT(\[tmux\], /s/next-//' configure.ac
+        run: sed -i '/AC_INIT(\[tmux\], /s/next-//' configure.ac
       - name: "Extract version numer"
         run: |
           VERSION=$(grep 'AC_INIT(\[tmux\],' configure.ac | sed -n 's/.*AC_INIT(\[tmux\], \([0-9]*\.[0-9]*\)).*/\1/p')
