--- a/.github/workflows/fast-auto-tag-release.yml
+++ b/.github/workflows/fast-auto-tag-release.yml
@@ -36,7 +36,7 @@ jobs:
         run: sed -i '/AC_INIT(\[tmux\], /s/next-//' configure.ac
       - name: "Extract version numer"
         run: |
-          VERSION=$(grep 'AC_INIT(\[tmux\],' configure.ac | sed -n 's/.*AC_INIT(\[tmux\], \([0-9]*\.[0-9]*\)).*/\1/p')
+          VERSION=$(grep 'AC_INIT(\[tmux\],' configure.ac | sed -n 's/.*AC_INIT(\[tmux\], \([0-9]*\.[0-9]*\.[0-9]*\)).*/\1/p')
           echo "Current version: $VERSION"
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
@@ -83,8 +83,8 @@ jobs:
       - name: "Update next version number"
         run: |
           IFS='.' read -ra VER <<< "$VERSION"
-          NEW_MINOR=$((VER[1]+1))
-          NEW_VERSION="${VER[0]}.$NEW_MINOR"
+          NEW_PATCH=$((VER[2]+1))
+          NEW_VERSION="${VER[0]}.${VER[1]}.$NEW_PATCH"
 
           # Write back to file
           sed -i "s/AC_INIT(\[tmux\], $VERSION)/AC_INIT([tmux], next-$NEW_VERSION)/" configure.ac
