--- a/.github/workflows/tagged-release.yml
+++ b/.github/workflows/tagged-release.yml
@@ -1,4 +1,3 @@
----
 name: "tagged-release"
 
 on:
@@ -8,11 +7,40 @@ on:
 
 jobs:
   gh_tagged_release:
-    runs-on: "ubuntu-latest"
-    env:
-      JEST_VERBOSE: ${{ secrets.JEST_VERBOSE }}
+    runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Setup
+        run: |
+          git checkout master
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          NEW_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
+          echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
+          BASE_URL=`git config --get remote.origin.url | sed 's/\.git//g'`
+          echo "BASE_URL=$BASE_URL" >> $GITHUB_ENV
+
+      - name: Add to CHANGES
+        id: add_to_changes
+        run: |
+          PREV_TAG=$(git describe --abbrev=0 --tags $(git rev-list --tags --skip=1 --max-count=1))
+          git log --pretty=format:'%s' $PREV_TAG..HEAD > /tmp/tmux-tagged-release
+          sed 's/^/* /' /tmp/tmux-tagged-release > /tmp/tmp_file
+          echo CHANGES FROM $PREV_TAG to $NEW_TAG | cat - /tmp/tmp_file > /tmp/tmux-tagged-release
+          sed G /tmp/tmux-tagged-release > /tmp/tmp_file
+          cat /tmp/tmp_file | cat - CHANGES > /tmp/tmux-tagged-release
+          cat /tmp/tmux-tagged-release > CHANGES
+          rm /tmp/tmux-tagged-release
+          rm /tmp/tmp_file
+          git add CHANGES
+          git commit -m "change CHANGES for new release"
+          git push
+
       - name: "Checkout source code"
         uses: "actions/checkout@v2.3.4"
         with:
@@ -26,13 +54,6 @@ jobs:
           path: ${{ steps.yarn-cache.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
 
-      # - run: "yarn install --frozen-lockfile"
-      # - run: "yarn lint"
-      # - run: "yarn build"
-      # - run: "yarn jest --env=node --colors --forceExit"
-
-      # - run: "sh autogen.sh"
-      # - run: "./configure"
       - run: "sudo apt-get update -qq"
       - run: "sudo apt-get -y install bison \
           autotools-dev \
@@ -48,22 +69,39 @@ jobs:
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
           prerelease: false
           files: |
             *.tar.gz
         id: "automatic_releases"
 
-      # marvinpinto/action-keybase-notifications
-      # marvinpinto/action-automatic-releases
-      # - name: "Automatically mirror release artifacts"
-      #   env:
-      #     GITHUB_SUPER_TOKEN: ${{ secrets.GITHUB_SUPER_TOKEN }}
-      #   run: |
-      #     ./scripts/mirror-actions.sh "$AUTOMATIC_RELEASES_TAG"
+      - name: Create new release issue
+        run: |
+          previous_issue_number=$(gh issue list \
+            --label "$LABELS" \
+            --json number \
+            --jq '.[0].number')
+          if [[ -n $previous_issue_number ]]; then
+            gh issue close "$previous_issue_number"
+            gh issue unpin "$previous_issue_number"
+          fi
+          new_issue_url=$(gh issue create \
+            --title "$NEW_TAG questions and comments" \
+            --label "release" \
+            --body "$BODY")
+          echo "ISSUE_URL=$new_issue_url" >> $GITHUB_ENV
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_REPO: ${{ github.repository }}
+          BODY: |
+            Ask or discuss any quick questions about ${{ env.NEW_TAG }} here please.
+            Do not use this issue for bug reports, please open a new issue with full information, see [CONTRIBUTING](${{ env.BASE_URL }}/blob/master/.github/CONTRIBUTING.md).
 
-      # - uses: "marvinpinto/action-keybase-notifications@latest"
-      #   if: always()
-      #   with:
-      #     job_status: ${{ job.status }}
-      #     opensentinel_token: ${{ secrets.OSL_TOKEN }}
+            [The ${{ env.NEW_TAG }} CHANGES file is here](${{ env.BASE_URL }}/blob/master/CHANGES).
+
+            As always, thanks to the many people who contributed to both this and to previous releases.
+
+      - name: "Update Release Notes"
+        run: |
+          gh release edit $NEW_TAG -n "For a list of changes [please read the CHANGES file](${{ env.BASE_URL }}/blob/master/CHANGES); for release notes [please see this issue]($ISSUE_URL)"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
